socklog 1.2.0
  * socklog-conf.c: fix run file for socklog-unix service on solaris; use
    runit's chpst instead of setuidgid.
  * doc/install.html: remove obsolete note about setuidgid replacement.
  * doc/examples.html: adapt.
  * doc/index.html: adapt examples.

socklog 1.1.1
Mon, 07 Jul 2003 09:59:08 +0200
  * socklog-conf.c: fix typos (thx Hleil Liu); use mail -s instead of
    mailsubj for the notify service.

socklog 1.1.0
Thu, 19 Jun 2003 15:40:52 +0200
  * man/socklog-conf.8, man/socklog.8, man/tryto.1: typos.
  * doc/benefits.html, doc/configuration.html, doc/examples.html,
    doc/index.html, doc/network.html, doc/notify.html,
    doc/readme.solaris.html, man/socklog-conf.8, man/socklog.8, man/tryto.1,
    man/uncat.1: utilize runit package instead of daemontools package.
  * socklog-conf.c: create service directories for the use with the runit
    package.

socklog 1.0.0
Thu, 30 Jan 2003 13:32:24 +0100
  * doc/configuration.html, doc/examples.html: remove description for
    socklog-ucspi-unix service.
  * doc/benefits.html, doc/network.html, doc/readme.solaris.html,
    doc/usedietlibc.html, man/socklog-conf.8: typos.
  * error.h: include <errno.h>.
  * tryto.c: catch possible error in write() to child; minor cleanup.
  * doc/index.html: add NetBSD to supported systems.

socklog 0.10.1
Thu, 08 Aug 2002 22:55:35 +0200
  * package/versions: new.
  * doc/network.html: typos.
  * doc/usedietlibc.html: fix path to conf-cc, conf-ld.

socklog 0.10.0
Thu, 18 Jul 2002 15:45:58 +0200
  * solaris support rewrite (thx Lars Uffmann):
    * socklog.c: new option sun_stream; new optional option door; rewrite
      solaris related code.
    * socklog-conf.c: option unix: create special run script on solaris.
    * doc/readme.solaris.html: new.
    * (thx Lars Uffmann).
  * documentation adapted.

socklog 0.9.1
Wed, 26 Jun 2002 15:54:06 +0200
  * Makefile: enable target sysdeps.

socklog 0.9.0
Fri, 31 May 2002 14:07:11 +0200