@@ -57,13 +57,13 @@ does <a href="notify.html">log event notification</a>.
 <p>
 <a href="http://smarden.org/runit/svlogd.8.html">svlogd</a>
 has a built in
-<a href="benefits.html#logrotation">logfile rotation based on file size</a>,
+<a href="benefits.html#logrotation">log file rotation based on file size</a>,
 so there is no need for any cron jobs or similar to rotate the logs.
 Log partitions can be calculated properly.
 <p>
 <i>socklog</i> runs on <b>Linux</b>, glibc 2.1.0 or higher, or dietlibc,
-<b>OpenBSD</b>, and <b>FreeBSD</b>.
-<i>socklog</i> reportedly runs on <b>Solaris</b> and <b>NetBSD</b>.
+<b>Open-BSD</b>, and <b>Free-BSD</b>.
+<i>socklog</i> reportedly runs on <b>Solaris</b> and <b>Net-BSD</b>.
 If it runs for you on any other operating systems, please
 <a href="mailto:pape-socklog@smarden.org">let me know</a>.
 <p>
