@@ -15,7 +15,7 @@ different <tt>run</tt> scripts that utilize the new
 <a href="http://smarden.org/runit/chpst.8.html">chpst</a> program from the <i>runit</i>
 package.
 Please refer to the <a href="examples.html">examples</a> if you want to adapt your
-current <tt>run</tt> files.
+current <tt>run</tt> scripts.
 <h3>1.0.0 to 1.1.0 or 1.1.1</h3>
 The socklog package now cooperates with the runit package instead of the
 daemontools package to provide syslog services.
