@@ -1,9 +1,11 @@
 socklog 1.2.0
+Sat, 09 Aug 2003 18:08:20 +0200
   * socklog-conf.c: fix run file for socklog-unix service on solaris; use
     runit's chpst instead of setuidgid.
   * doc/install.html: remove obsolete note about setuidgid replacement.
   * doc/examples.html: adapt.
   * doc/index.html: adapt examples.
+  * doc/benefits.html: minor.
 
 socklog 1.1.1
 Mon, 07 Jul 2003 09:59:08 +0200
